<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">



    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/round_settings_24"
        android:contentDescription="@string/settings_icon" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvNotifications"
                android:layout_width="match_parent"
                android:text="@string/settings"
                android:layout_height="100dp"
                android:autoSizeMinTextSize="16sp"
                android:autoSizeMaxTextSize="60sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:textAlignment="center"
                />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchNotifications"
                android:layout_width="wrap_content"
                android:text="@string/notificationsSwitch"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textSize="16sp"
                android:layout_gravity="center"
                />
            <Spinner
                android:id="@+id/spinnerTimeChoose"
                android:layout_width="315dp"
                android:contentDescription="Notification time chooser"
                android:layout_height="48dp"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_categories"
                android:textSize="16sp"
                android:layout_gravity="center"
                />
            <Spinner
                android:id="@+id/spinnerCategoryChoose"
                android:contentDescription="Visible Category chooser"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_hide_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide_completed_tasks"
                android:layout_gravity="center"
                />
            <Button
                android:id="@+id/saveButt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/save_current_settings"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:onClick="saveSettings"
                />




        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>